--- a/runbooks/01_運用ルール.md
+++ b/runbooks/01_運用ルール.md
@@ -16,3 +16,31 @@
 ## 保存場所
 - rawの出力（txt/json）は Google Drive の 03_最新 snapshot に保存する。
 - GitHubには “要約” と “Driveリンク” と “差分が分かる情報” を残す（10_ReadOnly_Check.md）。
+
+---
+
+# 運用ルール（固定）
+
+## 1. 正本の役割分担（固定）
+- GitHub: 手順（Runbook）/ 状態の要約（Inventory）/ 参照リンク（Index）
+- Google Drive: 重いログ / export / snapshot（生データ）
+
+## 2. Snapshot のルール（固定）
+- 変更作業は必ず「Before → After」の2回 snapshot を取る
+- Snapshot は Drive に保存する（GitHubには置かない）
+- Drive フォルダ命名規則:
+  - YYYY-MM-DD_<TASK>_before/
+  - YYYY-MM-DD_<TASK>_after/
+- <TASK> は短い英数字に統一（例: ASR502, NPMFix, N8nUpgrade）
+
+## 3. Inventory のルール（固定）
+- inventory は「状態の要約」と「Drive上のログ所在」を記録する
+- 生ログは書かない（Driveに置き、GitHubは参照だけ）
+- Inventory は1作業=1ファイルで残す
+- Inventory ファイル命名規則:
+  - inventory/YYYY-MM-DD_<TASK>_index.md
+
+## 4. Handover のルール（固定）
+- 作業サイクルの最後に handover を1本残す（当日分）
+- 命名:
+  - runbooks/90_Handover_YYYY-MM-DD.md
